2005-04-25  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.profile.buildlinelist.ave:
	* dcsewerdesign.profile.create.ave: deleted (old code, not used
	any more)
	* dcsewerdesign.complexprofile.create.ave: fixed bug #1182188 (buggy
	profile creation for water networks)
	
2005-03-10  Steffen Macke <sdteffen@gmail.com>

	* dcsewerdesign.complexprofile.create.ave:
	* dcsewerdesign.profile.cumulativelinedatebox.create.ave:
	* dcsewerdesign.profile.linedatabox.ave:
	* dcsewerdesign.profile.manholedatabox.ave:
	* doc/en/dcsewerdesign.xml: Text alignment for data box contents can
	be specified now (RFE #1158375)
	* doc/version.xml:
	* dcsewerdesign.nsi: 
	* dcsewerdesignextension.make.ave: version is 2.0.6+cvs now
	
2005-03-07  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.complexprofile.create.ave: Profiles can be created for
	single lines now (RFE #1111927)
	* dcsewerdesignextension.make.ave: Version number is 2.0.6+cvs now

2005-02-03  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcsewerdesign.xml: Added tip to create function 
	(upstream/downstream values for manholes)
	
2005-01-31  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.nsi:
	* doc/en/version.xml:
	* dcsewerdesignextension.make.ave:
	* build.xml:
	* doc/en/dcsewerdesign.xml: updated for 2.0.6 release
	* dcsewerdesignextension.uninstall.ave: fixed unloading of table menu
	* dcsewerdesign.networkcalculator.calculate.ave: Completed first version
	of the network calculator
	
2005-01-28  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesignextension.install.ave:
	* dcsewerdesignextension.make.ave:
	* dcsewerdesignextension.uninstall.ave:
	* dcsewerdesign.networkcalculator.calculate.ave:
	* dcsewerdesign.networkcalculator.update.ave: Started with
	NetworkCalculator implementation (RFE 1110647)
	* build.xml: switched to tarball; including sample files
	* dcsewerdesign.complexprofile.create.ave: