@@ -5,7 +5,7 @@
   <!-- configuration -->
   
   <!-- Custom DC Sewer Design stylesheets -->
-  <property name="dcsewerdesign_version" value="2.0.6" />
+  <property name="dcsewerdesign_version" value="2.0.7" />
   
   <target name="DCSewDesDistribution" id="DC Sewer DesignDistribution">
     <tar destfile="dcsewerdesign-src-${dcsewerdesign_version}.tar">
